--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@mondaydotcomorg/api": "^13.0.0",
+    "@types/nodemailer": "^7.0.5",
+    "googleapis": "^170.1.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.4",
     "next-auth": "^4.24.13",
+    "nodemailer": "^7.0.12",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "resend": "^6.8.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
