--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@mondaydotcomorg/api": "^13.0.0",
     "@types/nodemailer": "^7.0.5",
+    "browser-image-compression": "^2.0.2",
+    "cloudinary": "^2.9.0",
     "googleapis": "^170.1.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.4",
