--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,24 +1,24 @@
 steps:
-  # Build the container image
+  # Build the container image using Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'build'
       - '-t'
-      - 'gcr.io/$PROJECT_ID/dans-client-portal:$COMMIT_SHA'
+      - 'us-central1-docker.pkg.dev/$PROJECT_ID/dans-client-portal/app:$COMMIT_SHA'
       - '-t'
-      - 'gcr.io/$PROJECT_ID/dans-client-portal:latest'
+      - 'us-central1-docker.pkg.dev/$PROJECT_ID/dans-client-portal/app:latest'
       - '.'
 
-  # Push the container image to Container Registry
+  # Push the container image to Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'push'
-      - 'gcr.io/$PROJECT_ID/dans-client-portal:$COMMIT_SHA'
+      - 'us-central1-docker.pkg.dev/$PROJECT_ID/dans-client-portal/app:$COMMIT_SHA'
 
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'push'
-      - 'gcr.io/$PROJECT_ID/dans-client-portal:latest'
+      - 'us-central1-docker.pkg.dev/$PROJECT_ID/dans-client-portal/app:latest'
 
   # Deploy container image to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -28,7 +28,7 @@ steps:
       - 'deploy'
       - 'dans-client-portal'
       - '--image'
-      - 'gcr.io/$PROJECT_ID/dans-client-portal:$COMMIT_SHA'
+      - 'us-central1-docker.pkg.dev/$PROJECT_ID/dans-client-portal/app:$COMMIT_SHA'
       - '--region'
       - 'us-central1'
       - '--platform'
@@ -37,18 +37,23 @@ steps:
       - '--port'
       - '8080'
       - '--memory'
-      - '512Mi'
+      - '1Gi'
       - '--cpu'
       - '1'
       - '--min-instances'
       - '0'
       - '--max-instances'
       - '10'
+      - '--set-env-vars'
+      - 'NODE_ENV=production'
+      - '--set-secrets'
+      - 'GOOGLE_SERVICE_ACCOUNT_EMAIL=GOOGLE_SHEETS_CLIENT_EMAIL:latest,GOOGLE_PRIVATE_KEY=GOOGLE_SHEETS_PRIVATE_KEY:latest,GOOGLE_SHEETS_ID=GOOGLE_SHEETS_SPREADSHEET_ID:latest,CLOUDINARY_CLOUD_NAME=CLOUDINARY_CLOUD_NAME:latest,CLOUDINARY_API_KEY=CLOUDINARY_API_KEY:latest,CLOUDINARY_API_SECRET=CLOUDINARY_API_SECRET:latest,ADMIN_PASSWORD=ADMIN_PASSWORD:latest,RESEND_API_KEY=RESEND_API_KEY:latest,NEXTAUTH_SECRET=NEXTAUTH_SECRET:latest,CRON_SECRET=CRON_SECRET:latest'
 
 images:
-  - 'gcr.io/$PROJECT_ID/dans-client-portal:$COMMIT_SHA'
-  - 'gcr.io/$PROJECT_ID/dans-client-portal:latest'
+  - 'us-central1-docker.pkg.dev/$PROJECT_ID/dans-client-portal/app:$COMMIT_SHA'
+  - 'us-central1-docker.pkg.dev/$PROJECT_ID/dans-client-portal/app:latest'
 
 options:
   logging: CLOUD_LOGGING_ONLY
 
+timeout: '1200s'
