--- a/.gitignore
+++ b/.gitignore
@@ -28,11 +28,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
-# env files
-.env
-.env*.local
-.env.production
+# env files (can opt-in for committing if needed)
+.env*
 
 # vercel
 .vercel
@@ -40,10 +39,3 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
-# IDE
-.vscode
-.idea
-*.swp
-*.swo
-*~
